# hpp-affordance

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.extra.in
include/hpp/affordance/: affordance-extraction.hh  doc.hh.in  fwd.hh  operations.hh
src/: CMakeLists.txt  affordance-extraction.cc
tests/: CMakeLists.txt  test-create-mesh.cc  test-main.cc  test-main2.cc  test-main3.cc  test-one-triangle.cc  test-one-triangle1.cc  test-one-triangle2.cc  test-operations.cc  test-oriented-triangles.cc  test-oriented-triangles1.cc  test-oriented-triangles2.cc  test4.py
